# opensvc-collector-mcp

./: .gitignore  CODEX.md  README.md  pyproject.toml  requirements.txt
docs/tools/: clusters.md  compliance.md  nodes.md  services.md
src/opensvc_collector_mcp/: __init__.py  client.py  config.py  server.py
src/opensvc_collector_mcp/core/: __init__.py  clusters_core.py  nodes_core.py  services_core.py  utils.py
src/opensvc_collector_mcp/core/clusters/: __init__.py  inventory.py
src/opensvc_collector_mcp/core/compliance/: __init__.py  _common.py  inventory.py  rulesets.py  status.py
src/opensvc_collector_mcp/core/nodes/: __init__.py  _common.py  checks.py  cluster.py  compliance.py  hardware.py  health.py  inventory.py  location.py  network.py  organization.py  os.py  services.py  stats.py  storage.py  tags.py
src/opensvc_collector_mcp/core/services/: __init__.py  _common.py  actions.py  compliance.py  health.py  inventory.py  resources.py  storage.py  tags.py
src/opensvc_collector_mcp/models/: __init__.py  clusters_model.py  nodes_model.py  services_model.py
src/opensvc_collector_mcp/models/clusters/: __init__.py  inventory.py
src/opensvc_collector_mcp/models/compliance/: __init__.py  _common.py  inventory.py  rulesets.py  status.py
src/opensvc_collector_mcp/models/nodes/: __init__.py  _common.py  checks.py  cluster.py  compliance.py  hardware.py  health.py  inventory.py  location.py  network.py  organization.py  os.py  services.py  stats.py  storage.py  (+1 more)
src/opensvc_collector_mcp/tools/: __init__.py  clusters.py  compliance.py  nodes.py  services.py
(+9 files in other folders)
